src/main/java/semantic/symbolTable/test/failing/redefinedImplement.ru
impl A {
    fn someFunction() -> void {}
}

impl A {
    fn someFunction() -> void {}
}

start {}